--- a/dependencies.html
+++ b/dependencies.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org CORE - Project Dependencies</title>
+    <title>OpenWMS.org CORE BOM - Project Dependencies</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org CORE
+                OpenWMS.org CORE BOM
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+            <div class="xright">                    <a href="./" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
               
                     
       </div>
@@ -45,36 +45,12 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
-            </li>
-          </ul>
-                       <h5>Modules</h5>
-                  <ul>
-                  <li class="none">
-                          <a href="index.html" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.configuration/index.html" title="org.openwms.core.configuration">org.openwms.core.configuration</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.lang/index.html" title="org.openwms.core.lang">org.openwms.core.lang</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.search/index.html" title="org.openwms.core.search">org.openwms.core.search</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.test/index.html" title="org.openwms.core.test">org.openwms.core.test</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.uaa/index.html" title="org.openwms.core.uaa">org.openwms.core.uaa</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.util/index.html" title="org.openwms.core.util">org.openwms.core.util</a>
+                          <a href="index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                                            <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -106,9 +82,6 @@
             </li>
                       <li class="none">
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
-            </li>
-                      <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
@@ -257,14 +230,14 @@
 <div class="section">
 <h3>Dependency Tree<a name="Dependency_Tree"></a></h3>
 <ul>
-<li>org.openwms:org.openwms.core:pom:1.1.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
+<li>org.openwms:org.openwms.core.bom:pom:1.1.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
-<th>OpenWMS.org CORE</th></tr>
+<th>OpenWMS.org CORE BOM</th></tr>
 <tr class="b">
 <td>
 <p><b>Description: </b>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</p>
-<p><b>URL: </b><a class="externalLink" href="http://www.openwms.org/org.openwms.core">http://www.openwms.org/org.openwms.core</a></p>
+<p><b>URL: </b><a class="externalLink" href="http://www.openwms.org/org.openwms.core/org.openwms.core.bom">http://www.openwms.org/org.openwms.core/org.openwms.core.bom</a></p>
 <p><b>Project Licenses: </b><a class="externalLink" href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt">GNU General Public License</a></p></td></tr></table></div>
 <ul>
 <li>org.slf4j:slf4j-api:jar:1.7.21 (compile) <img id="_img3" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep2', '_img3' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep2" style="display:none">
@@ -351,7 +324,7 @@
 <p><b>Project Licenses: </b>No licenses are defined for this project.</p></td></tr></table></div></li></ul></li></ul></li></ul></div></div><a name="Licenses"></a>
 <div class="section">
 <h2>Licenses<a name="Licenses"></a></h2>
-<p><b>GNU General Public License: </b>OpenWMS.org CORE</p>
+<p><b>GNU General Public License: </b>OpenWMS.org CORE BOM</p>
 <p><b>Apache 2: </b>Objenesis</p>
 <p><b>Unknown: </b>Expression Language API (2.1 Maintenance Release), Expression Language Implementation</p>
 <p><b>Eclipse Public License 1.0: </b>JUnit</p>
