--- a/dependency-management.html
+++ b/dependency-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org CORE - Project Dependency Management</title>
+    <title>OpenWMS.org CORE BOM - Project Dependency Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org CORE
+                OpenWMS.org CORE BOM
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+            <div class="xright">                    <a href="./" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
               
                     
       </div>
@@ -45,36 +45,12 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
-            </li>
-          </ul>
-                       <h5>Modules</h5>
-                  <ul>
-                  <li class="none">
-                          <a href="index.html" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.configuration/index.html" title="org.openwms.core.configuration">org.openwms.core.configuration</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.lang/index.html" title="org.openwms.core.lang">org.openwms.core.lang</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.search/index.html" title="org.openwms.core.search">org.openwms.core.search</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.test/index.html" title="org.openwms.core.test">org.openwms.core.test</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.uaa/index.html" title="org.openwms.core.uaa">org.openwms.core.uaa</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.util/index.html" title="org.openwms.core.util">org.openwms.core.util</a>
+                          <a href="index.html" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                                            <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -106,9 +82,6 @@
             </li>
                       <li class="none">
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
-            </li>
-                      <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
