--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org CORE - About</title>
+    <title>OpenWMS.org CORE BOM - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org CORE
+                OpenWMS.org CORE BOM
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org CORE">OpenWMS.org CORE</a>
+            <div class="xright">                    <a href="./" title="OpenWMS.org CORE BOM">OpenWMS.org CORE BOM</a>
               
                     
       </div>
@@ -45,36 +45,12 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
-            </li>
-          </ul>
-                       <h5>Modules</h5>
-                  <ul>
-                  <li class="none">
-            <strong>OpenWMS.org CORE BOM</strong>
+            <strong>OpenWMS.org CORE</strong>
           </li>
-                  <li class="none">
-                          <a href="org.openwms.core.configuration/index.html" title="org.openwms.core.configuration">org.openwms.core.configuration</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.lang/index.html" title="org.openwms.core.lang">org.openwms.core.lang</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.search/index.html" title="org.openwms.core.search">org.openwms.core.search</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.test/index.html" title="org.openwms.core.test">org.openwms.core.test</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.uaa/index.html" title="org.openwms.core.uaa">org.openwms.core.uaa</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.core.util/index.html" title="org.openwms.core.util">org.openwms.core.util</a>
-            </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                                            <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -108,9 +84,6 @@
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
             </li>
                       <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
-            </li>
-                      <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
                       <li class="none">
@@ -138,37 +111,8 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About OpenWMS.org CORE<a name="About_OpenWMS.org_CORE"></a></h2><a name="About_OpenWMS.org_CORE"></a>
-<p>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</p>
-<div class="section">
-<h3>Project Modules<a name="Project_Modules"></a></h3><a name="Project_Modules"></a>
-<p>This project has declared the following modules:</p>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Name</th>
-<th>Description</th></tr>
-<tr class="b">
-<td><a href="/index.html">OpenWMS.org CORE BOM</a></td>
-<td>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</td></tr>
-<tr class="a">
-<td><a href="org.openwms.core.configuration/index.html">org.openwms.core.configuration</a></td>
-<td>This module implements a configuration service that is able to merge configuration, and provide inherited and scoped
-        preferences such as user- role- modue or global application preferences.</td></tr>
-<tr class="b">
-<td><a href="org.openwms.core.lang/index.html">org.openwms.core.lang</a></td>
-<td>OpenWMS.org :: CORE :: Internationalisation and Localisation services</td></tr>
-<tr class="a">
-<td><a href="org.openwms.core.search/index.html">org.openwms.core.search</a></td>
-<td>Spring implementation of the service layer.</td></tr>
-<tr class="b">
-<td><a href="org.openwms.core.test/index.html">org.openwms.core.test</a></td>
-<td>A project that contains classes to support proper testing. Additionally some Spring configuration is provided that starts a Spring managed test environment.</td></tr>
-<tr class="a">
-<td><a href="org.openwms.core.uaa/index.html">org.openwms.core.uaa</a></td>
-<td>OpenWMS.org :: CORE :: User Authentication and Administration</td></tr>
-<tr class="b">
-<td><a href="org.openwms.core.util/index.html">org.openwms.core.util</a></td>
-<td>A project that contains utility classes, exception types, common event types that are used by all other projects.</td></tr></table></div></div>
+<h2>About OpenWMS.org CORE BOM<a name="About_OpenWMS.org_CORE_BOM"></a></h2><a name="About_OpenWMS.org_CORE_BOM"></a>
+<p>The CORE project Maven POM file. Just a common definition of dependencies valid for all other CORE projects. Call mvn install -Pcore to build all CORE projects.</p></div>
       </div>
     </div>
     <div class="clear">
