--- a/distribution-management.html
+++ b/distribution-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.util - Project Distribution Management</title>
+    <title>org.openwms.core.configuration - Project Distribution Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.util
+                org.openwms.core.configuration
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.util">org.openwms.core.util</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.configuration">org.openwms.core.configuration</a>
               
                     
       </div>
@@ -121,7 +121,7 @@
 <p>${distribution.repo.serverProtocol}://${distribution.repo.snapshot.serverUrl.rootPath}</p></div>
 <div class="section">
 <h3>Site - ${distribution.serverId}<a name="Site_-_distribution.serverId"></a></h3><a name="Site_-_distribution.serverId"></a>
-<p>${distribution.serverProtocol}://${distribution.serverUrl.sourcePath}/org.openwms.core/org.openwms.core.util</p></div></div>
+<p>${distribution.serverProtocol}://${distribution.serverUrl.sourcePath}/org.openwms.core/org.openwms.core.configuration</p></div></div>
       </div>
     </div>
     <div class="clear">
