--- a/source-repository.html
+++ b/source-repository.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.core.util - Source Code Management</title>
+    <title>org.openwms.core.configuration - Source Code Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.core.util
+                org.openwms.core.configuration
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.core.util">org.openwms.core.util</a>
+            <div class="xright">                    <a href="./" title="org.openwms.core.configuration">org.openwms.core.configuration</a>
               
                     
       </div>
@@ -117,7 +117,7 @@
 <h2>Web Browser Access<a name="Web_Browser_Access"></a></h2><a name="Web_Browser_Access"></a>
 <p>The following is a link to a browsable version of the source repository:</p>
 <div class="source">
-<pre><a class="externalLink" href="https://github.com/openwms/org.openwms/org.openwms.core.util">https://github.com/openwms/org.openwms/org.openwms.core.util</a></pre></div></div>
+<pre><a class="externalLink" href="https://github.com/openwms/org.openwms/org.openwms.core.configuration">https://github.com/openwms/org.openwms/org.openwms.core.configuration</a></pre></div></div>
 <div class="section">
 <h2>Anonymous Access<a name="Anonymous_Access"></a></h2><a name="Anonymous_Access"></a>
 <p>The source can be checked out anonymously from Git with this command (See <a class="externalLink" href="http://git-scm.com/docs/git-clone">http://git-scm.com/docs/git-clone</a>):</p>
